2004-06-10  Mike Kestner  <mkestner@ximian.com>

	* configure.in : AC_SUBST GACUTIL_FLAGS. require mono-0.95 (though
	it's really cvs bleeding edge.)
	* * AssemblyInfo.cs.in : s/pub/snk.  delaysign=no.
	* * Makefile.am : s/pub/snk.  portability fixes to csc from John 
	Luke.  Switch to GACUTIL_FLAGS.
	* doc/Makefile.am : don't build docs, install raw xml to the prefix.
	
2004-06-10  Todd Berman  <tberman@sevenl.net>

	* gtk/Container.custom: add C# glue for virtualizing ChildType ()
	* gtk/glue/container.c: add C glue for virtualizing ChildType ()
	* gtk/Gtk.metadata: hide Container.ChildType ()
	* gtk/Widget.custom: Add ClearFlag, and SetFlag convenience methods.
	Also add various IsFlag bool properties for checking for flags.
	* gtk/glue/widget.c: Fix setting flags.
	* doc/*: updated Widget docs.

2004-06-09  Todd Berman  <tberman@sevenl.net>

	* gdk/Gdk.metadata: mark Window.SetBackPixmap as null_ok.
	* glib/Object.cs: in set_Raw, if value == IntPtr.Zero, dont put that
	in the weakref hashtable, as it creates later issues with gtk+
	returning null and gtk# mistaking if for an object.

2004-06-08  Mike Kestner  <mkestner@ximian.com>

	* gnomedb/Application.cs : add a missing DllImport.

2004-06-08  Mike Kestner  <mkestner@ximian.com>

	* gdk/Gdk.metadata : mark array param on Drawable.*Image.

2004-06-08  Mike Kestner  <mkestner@ximian.com>

	* gdk/Gdk.metadata : mark array param on Drawable.DrawGrayImage.

2004-06-07  Mike Kestner  <mkestner@ximian.com>

	* */Makefile.am : s|--unsafe|/unsafe to remove a mcs-ism that jluke
	exposed in his cygwin build patch.

2004-06-07  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* configure.in: Add pango pkg-config check.
	* pango/Layout.custom: Updated custom code to new opaque LayoutLine.
	* pango/LayoutLine.custom: Properties for LayoutLine struct fields.
	* pango/Makefile.am:
	* pango/Pango.metadata: Make LayoutLine opaque [Fixes #59666].
	* pango/glue/.cvsignore:
	* pango/glue/Makefile.am: