@@ -393,8 +393,7 @@
       </Parameters>
       <Docs>
         <summary>Gets the affine transform that converts from item-relative coordinates to canvas pixel coordinates.</summary>/
-        <param name="affine">Return value for an affine transformation matrix (return value).</param><remarks>
-        </remarks></Docs>
+        <param name="affine">Return value for an affine transformation matrix (return value).</param><remarks></remarks></Docs>
     </Member>
     <Member MemberName="Raise">
       <MemberSignature Language="C#" Value="public void Raise (int positions);" />
