@@ -37,16 +37,5 @@
         <remarks>To be added</remarks>
       </Docs>
     </Member>
-    <Member MemberName=".ctor">
-      <MemberSignature Language="C#" Value="protected Conv ();" />
-      <MemberType>Constructor</MemberType>
-      <ReturnValue />
-      <Parameters />
-      <Docs>
-        <summary>To be added</summary>
-        <returns>a <see cref="T:Vte.Conv" /></returns>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
   </Members>
 </Type>
