@@ -825,34 +825,6 @@
         <remarks>To be added</remarks>
       </Docs>
     </Member>
-    <Member MemberName="ForkCommand">
-      <MemberSignature Language="C#" Value="public int ForkCommand (string command, string argv, string envv, string directory, bool lastlog, bool utmp, bool wtmp);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Int32</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="command" Type="System.String" />
-        <Parameter Name="argv" Type="System.String" />
-        <Parameter Name="envv" Type="System.String" />
-        <Parameter Name="directory" Type="System.String" />
-        <Parameter Name="lastlog" Type="System.Boolean" />
-        <Parameter Name="utmp" Type="System.Boolean" />
-        <Parameter Name="wtmp" Type="System.Boolean" />
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <param name="command">a <see cref="T:System.String" /></param>
-        <param name="argv">a <see cref="T:System.String" /></param>
-        <param name="envv">a <see cref="T:System.String" /></param>
-        <param name="directory">a <see cref="T:System.String" /></param>
-        <param name="lastlog">a <see cref="T:System.Boolean" /></param>
-        <param name="utmp">a <see cref="T:System.Boolean" /></param>
-        <param name="wtmp">a <see cref="T:System.Boolean" /></param>
-        <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
     <Member MemberName="Reset">
       <MemberSignature Language="C#" Value="public void Reset (bool full, bool clear_history);" />
       <MemberType>Method</MemberType>
@@ -916,22 +888,6 @@
       <Parameters />
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="IsWordChar">
-      <MemberSignature Language="C#" Value="public bool IsWordChar (string c);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Boolean</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="c" Type="System.String" />
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <param name="c">a <see cref="T:System.String" /></param>
-        <returns>a <see cref="T:System.Boolean" /></returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -1999,6 +1955,47 @@
       <Parameters />
       <Docs>
         <summary>To be added</summary>
+        <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="Font">
+      <MemberSignature Language="C#" Value="public Pango.FontDescription Font { set; get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>Pango.FontDescription</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>To be added</summary>
+        <returns>a <see cref="T:Pango.FontDescription" /></returns>
+        <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="ForkCommand">
+      <MemberSignature Language="C#" Value="public int ForkCommand (string command, string [] argv, string [] envv, string directory, bool lastlog, bool utmp, bool wtmp);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Int32</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="command" Type="System.String" />
+        <Parameter Name="argv" Type="System.String[]" />
+        <Parameter Name="envv" Type="System.String[]" />
+        <Parameter Name="directory" Type="System.String" />
+        <Parameter Name="lastlog" Type="System.Boolean" />
+        <Parameter Name="utmp" Type="System.Boolean" />
+        <Parameter Name="wtmp" Type="System.Boolean" />
+      </Parameters>
+      <Docs>
+        <summary>To be added</summary>
+        <param name="command">a <see cref="T:System.String" /></param>
+        <param name="argv">a <see cref="T:System.String" /></param>
+        <param name="envv">a <see cref="T:System.String" /></param>
+        <param name="directory">a <see cref="T:System.String" /></param>
+        <param name="lastlog">a <see cref="T:System.Boolean" /></param>
+        <param name="utmp">a <see cref="T:System.Boolean" /></param>
+        <param name="wtmp">a <see cref="T:System.Boolean" /></param>
+        <returns>a <see cref="T:System.Int32" /></returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
