@@ -303,22 +303,6 @@
         <remarks>To be added</remarks>
       </Docs>
     </Member>
-    <Member MemberName="GetCharacterAtOffset">
-      <MemberSignature Language="C#" Value="public virtual string GetCharacterAtOffset (int offset);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.String</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="offset" Type="System.Int32" />
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <param name="offset">a <see cref="T:System.Int32" /></param>
-        <returns>a <see cref="T:System.String" /></returns>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
     <Member MemberName="SetSelection">
       <MemberSignature Language="C#" Value="public virtual bool SetSelection (int selection_num, int start_offset, int end_offset);" />
       <MemberType>Method</MemberType>
@@ -658,17 +642,6 @@
       <Docs>
         <summary>To be added</summary>
         <param name="terminal">a <see cref="T:Vte.Terminal" /></param>
-        <returns>a <see cref="T:Vte.TerminalAccessible" /></returns>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName=".ctor">
-      <MemberSignature Language="C#" Value="protected TerminalAccessible ();" />
-      <MemberType>Constructor</MemberType>
-      <ReturnValue />
-      <Parameters />
-      <Docs>
-        <summary>To be added</summary>
         <returns>a <see cref="T:Vte.TerminalAccessible" /></returns>
         <remarks>To be added</remarks>
       </Docs>
