@@ -1,5 +1,13 @@
 2004-06-10  Mike Kestner  <mkestner@ximian.com>
 
+	* configure.in : break the monodoc dep, even though it was optional
+	it was a pain in the backside.
+	* doc/Makefile.am : add assemble target to build docs using monodoc.
+	we now have two manual targets which use monodoc, but aren't required
+	for the default build (update and assemble).
+
+2004-06-10  Mike Kestner  <mkestner@ximian.com>
+
 	* configure.in : AC_SUBST GACUTIL_FLAGS. require mono-0.95 (though
 	it's really cvs bleeding edge.)
 	* * AssemblyInfo.cs.in : s/pub/snk.  delaysign=no.
